fix: Remove scrollbars and unnecessary buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
+  width: 100%;
   height: 100%;
   background-color: #000000;
   color: white;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
