--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-body, html {
+body, html, #root {
   margin: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: #000000;
@@ -9,10 +10,6 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  height: 100%;
 }
 
 code {
